Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-40634

DEL_WITH_META fails: get_body_size: Failed to inflate data

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 6.6.0
    • 6.6.0
    • couchbase-bucket

    • Enterprise Edition 6.6.0 build 7883/6.6.0-7897

    Description

      – Create a replication between default bucket on source cluster to remove bucket on destination cluster. (Default bucket on source cluster has - compression - Active)
      – Following error is seen in babysitter.log and memcached.log. CPU on both the nodes is at 90%. Destination nodes have 2 nodes in cluster.

      Note - the same test on another cluster run smoothly without the error above.

      2020-07-26T20:55:59.064767-07:00 ERROR 319: exception occurred in runloop during packet execution. Cookie info: [{"aiostat":"success","connection":"[ 172.23.108.103:44786 - 172.23.105.111:11210 (<ud>Administrator</ud>) ]","engine_storage":"0x0000000000000000","ewouldblock":false,"packet":{"bodylen":402,"cas":0,"datatype":["Snappy","Xattr"],"extlen":24,"key":"<ud>9DC5E3F5-22_1536349</ud>","keylen":19,"magic":"ClientRequest","opaque":251658240,"opcode":"DEL_WITH_META","vbucket":179},"refcount":0}] - closing connection ([ 172.23.108.103:44786 - 172.23.105.111:11210 (<ud>Administrator</ud>) ]): get_body_size: Failed to inflate data
      2020-07-26T20:55:59.065379-07:00 WARNING (remote) Invalid streaming connection
      

      Attachments

        For Gerrit Dashboard: MB-40634
        # Subject Branch Project Status CR V

        Activity

          People

            ritam.sharma Ritam Sharma
            ritam.sharma Ritam Sharma
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty