MB-40634: Update datatype when decompressing the payload at DelWithMeta

Validations may fail otherwise, as some code paths try to re-inflate the
payload if still marked as compressed.

Change-Id: Iae20e7029cf031d32b63880a780a7052441f067d
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/133272
Tested-by: Build Bot <build@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>